; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_epoch.c_epoch_enter.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_epoch.c_epoch_enter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@cold = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @epoch_enter(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i64, i64* @cold, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %9, label %6

6:                                                ; preds = %1
  %7 = load i32*, i32** %2, align 8
  %8 = icmp ne i32* %7, null
  br label %9

9:                                                ; preds = %6, %1
  %10 = phi i1 [ true, %1 ], [ %8, %6 ]
  %11 = zext i1 %10 to i32
  %12 = call i32 @MPASS(i32 %11)
  %13 = load i32*, i32** %2, align 8
  %14 = call i32 @INIT_CHECK(i32* %13)
  %15 = call i32 (...) @critical_enter()
  %16 = load i32*, i32** %2, align 8
  %17 = call %struct.TYPE_3__* @epoch_currecord(i32* %16)
  store %struct.TYPE_3__* %17, %struct.TYPE_3__** %3, align 8
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  %20 = call i32 @ck_epoch_begin(i32* %19, i32* null)
  ret void
}

declare dso_local i32 @MPASS(i32) #1

declare dso_local i32 @INIT_CHECK(i32*) #1

declare dso_local i32 @critical_enter(...) #1

declare dso_local %struct.TYPE_3__* @epoch_currecord(i32*) #1

declare dso_local i32 @ck_epoch_begin(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
